// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document Component should render AMP version correctly 1`] = `
<html
  lang="test"
>
  <head>
    <title
      data-react-helmet="true"
    >
      Test title
    </title>
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      data-react-helmet="true"
      name="viewport"
    />
    <link
      data-react-helmet="true"
      href="https://www.bbc.com/news/articles/c6v11qzyv8po"
      rel="canonical"
    />
    <style
      amp-custom=""
      data-emotion-css="7prgni-StyledLink"
    >
      .css-7prgni-StyledLink{display:inline-block;}
    </style>
    <style
      amp-boilerplate=""
    >
      body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
    </style>
    <noscript>
      <style
        amp-boilerplate=""
      >
        body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
      </style>
    </noscript>
    <script
      async=""
      src="https://cdn.ampproject.org/v0.js"
    />
    <script
      async=""
      custom-element="amp-geo"
      src="https://cdn.ampproject.org/v0/amp-geo-0.1.js"
    />
    <script
      async=""
      custom-element="amp-consent"
      src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"
    />
    <script
      async=""
      custom-element="amp-analytics"
      src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    />
  </head>
  <body
    class="amp-geo-pending"
  >
    <div
      id="root"
    >
      <h1>
        App!
      </h1>
    </div>
  </body>
</html>
`;

exports[`Document Component should render APP version correctly 1`] = `
<html
  class="no-js"
  lang="test"
>
  <head>
    <meta
      content="noindex"
      name="robots"
    />
    <title
      data-react-helmet="true"
    >
      Test title
    </title>
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      data-react-helmet="true"
      name="viewport"
    />
    <link
      data-react-helmet="true"
      href="https://www.bbc.com/news/articles/c6v11qzyv8po"
      rel="canonical"
    />
    <style
      data-emotion-css="7prgni-StyledLink"
    >
      .css-7prgni-StyledLink{display:inline-block;}
    </style>
    <script>
      window.SIMORGH_ENV_VARS={"SIMORGH_PUBLIC_STATIC_ASSETS_ORIGIN":"http://localhost:7080","SIMORGH_PUBLIC_STATIC_ASSETS_PATH":"/"}
    </script>
  </head>
  <body>
    <div
      id="root"
    >
      <h1>
        App!
      </h1>
    </div>
    <script>
      window.SIMORGH_DATA={"test":"data"}
    </script>
    <link
      href="modern.main.js"
      rel="modulePreload"
    />
    <link
      href="modern.vendor.js"
      rel="modulePreload"
    />
    <link
      href="modern.igbo.js"
      rel="modulePreload"
    />
    <div>
      <!--[if !IE]&gt;&lt;!-->
    </div>
    <script
      src="modern.main.js"
    />
    <script
      src="modern.vendor.js"
    />
    <script
      src="modern.igbo.js"
    />
    <script
      src="legacy.main.js"
    />
    <script
      src="legacy.vendor.js"
    />
    <script
      src="legacy.igbo.js"
    />
    <div>
      <!--&lt;![endif]-->
    </div>
    <script
      type="text/javascript"
    >
      document.documentElement.classList.remove("no-js");
    </script>
  </body>
</html>
`;

exports[`Document Component should render LITE version correctly 1`] = `
<html
  lang="test"
>
  <head>
    <meta
      content="none"
      name="robots"
    />
    <title
      data-react-helmet="true"
    >
      Test title
    </title>
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      data-react-helmet="true"
      name="viewport"
    />
    <link
      data-react-helmet="true"
      href="https://www.bbc.com/news/articles/c6v11qzyv8po"
      rel="canonical"
    />
    <style>
      .css-7prgni-StyledLink{display:inline-block;}
    </style>
  </head>
  <body>
    <div>
      <h1>
        App!
      </h1>
    </div>
  </body>
</html>
`;

exports[`Document Component should render correctly 1`] = `
<html
  class="no-js"
  lang="test"
>
  <head>
    <title
      data-react-helmet="true"
    >
      Test title
    </title>
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      data-react-helmet="true"
      name="viewport"
    />
    <link
      data-react-helmet="true"
      href="https://www.bbc.com/news/articles/c6v11qzyv8po"
      rel="canonical"
    />
    <style
      data-emotion-css="7prgni-StyledLink"
    >
      .css-7prgni-StyledLink{display:inline-block;}
    </style>
    <script>
      window.SIMORGH_ENV_VARS={"SIMORGH_PUBLIC_STATIC_ASSETS_ORIGIN":"http://localhost:7080","SIMORGH_PUBLIC_STATIC_ASSETS_PATH":"/"}
    </script>
  </head>
  <body>
    <div
      id="root"
    >
      <h1>
        App!
      </h1>
    </div>
    <script>
      window.SIMORGH_DATA={"test":"data"}
    </script>
    <link
      href="modern.main.js"
      rel="modulePreload"
    />
    <link
      href="modern.vendor.js"
      rel="modulePreload"
    />
    <link
      href="modern.igbo.js"
      rel="modulePreload"
    />
    <div>
      <!--[if !IE]&gt;&lt;!-->
    </div>
    <script
      src="modern.main.js"
    />
    <script
      src="modern.vendor.js"
    />
    <script
      src="modern.igbo.js"
    />
    <script
      src="legacy.main.js"
    />
    <script
      src="legacy.vendor.js"
    />
    <script
      src="legacy.igbo.js"
    />
    <div>
      <!--&lt;![endif]-->
    </div>
    <script
      type="text/javascript"
    >
      document.documentElement.classList.remove("no-js");
    </script>
  </body>
</html>
`;
